style.css
.navigation-home, .navigation {
  width: 100%;
  padding-left: 10px;
  padding-top: 10px;
  position: fixed;
  z-index: 1;
  overflow-x: hidden;
}

.navigation a {
  padding-bottom: 5px;
  text-decoration: none;
  font-size: 20px;
  color: #BFC7D9;
  display: block;
}

.navigation a:hover {
  color: #FFFFFF;
}

.navigation {
  width: 150px;
}

.header {
  padding-top: 300px;
  width:100%;
  height:100vh;
  text-align: center;
  color: #FFFFFF;
}

.homepage {
  overflow: hidden;
}

.aboutme {
  overflow: hidden;
}

.main {
  padding-left: 175px;
  padding-right: 200px;
  padding-top: 50px;
  padding-bottom: 20px;
  font-size: 20px;
}

.am-pic {
  height: 500px;
  padding-top: 50px;
  padding-right: 100px;
  float: left;
}

.contact {
  padding-top: 350px;
  font-size: 25px;
  text-align: center;
}

.proj_img_2 {
  text-align: right;
}

.subheading {
  font-size: 20px;
  padding-bottom: 0px;
  margin-bottom: 0px;
  color: #cfd5e2;
}

.date {
  margin-bottom: 20px;
}

.resume {
  padding-top: 45px;
  font-size: 25px;
  text-align: center;
  
}

#quote {
  font-size: 45px;
  font-family: "Times New Roman", Times, serif
}

body {
  margin: 0px;
  padding: 0px;
}

h1 {
  font-size: 75px;
  margin: 0;
}

h3 {
  padding-top: 5px;
  margin-top: 0px;
  margin-bottom: 20px;
  font-size: 35px;
}

img {
  padding-top: 50px;
  padding-right: 100px;
}

* {
  background-color: #3a4660; 
  color: #FFFFFF;
  font-family: 'Roboto', sans-serif;
}

